--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,3 @@
-registry=https://registry.npmjs.org
-//registry=https://registry.yarnpkg.com
-
+registry=https://registry.yarnpkg.com
 # Expose Astro dependencies for `pnpm` users
 shamefully-hoist=true
